--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,29 +1,28 @@
-﻿<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <form method="post" action="@Url.Action("generateMoodPlaylist")">
+﻿<!DOCTYPE html>
+<html lang="en" data-bs-theme="dark">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Harmonix</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
 
-                <div class="form-group">
-                    <textarea class="formcontrol" name="query" id="query" placeholder="Enter your text" rows="4"></textarea>
-                </div>
-
-                <br />
-                
-                <button type="submit" class="btn btn-success">Submit</button>
-            </form>
-
-            @if (ViewBag.Playlist != null)
-            {
-                <div class="mt-4">
-                    <p>Result</p>
-                    <div class="alert alert-info">
-                        @foreach (var song in ViewBag.Playlist.Songs)
-                        {
-                            <p>@song.Title by @song.Artist</p>
-                        }
-                    </div>
-                </div>
-            }
+<div class="container col-xxl-8 px-4 py-5">
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+            <img src="" class="d-block mx-lg-auto img-fluid" alt="Harmonix Being Used" width="700" height="500" loading="lazy">
+        </div>
+        <div class="col-lg-6">
+            <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Harmonix generates playlists based on <span class="highlight">your</span> taste.</h1>
+            <h2>The Ultimate Music Discovery Tool</h2>
+            <p class="lead">Embrace the future of music discovery. Let Harmonix generate unqiue Spotify playlists tailored to your mood for the perfect vibe.</p>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                <a class="btn btn-success btn-lg px-4 me-md-1" asp-area="" asp-controller="Generate" asp-action="Index">
+                    Generate Playlist <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-spotify mx-1" viewBox="0 0 16 16">
+                        <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0m3.669 11.538a.5.5 0 0 1-.686.165c-1.879-1.147-4.243-1.407-7.028-.77a.499.499 0 0 1-.222-.973c3.048-.696 5.662-.397 7.77.892a.5.5 0 0 1 .166.686m.979-2.178a.624.624 0 0 1-.858.205c-2.15-1.321-5.428-1.704-7.972-.932a.625.625 0 0 1-.362-1.194c2.905-.881 6.517-.454 8.986 1.063a.624.624 0 0 1 .206.858m.084-2.268C10.154 5.56 5.9 5.419 3.438 6.166a.748.748 0 1 1-.434-1.432c2.825-.857 7.523-.692 10.492 1.07a.747.747 0 1 1-.764 1.288" />
+                    </svg>
+                </a>
+            </div>
         </div>
     </div>
 </div>
