start of spotify integration

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="footer text-muted shadow text-center">
         <div class="container">
             &copy; 2024 - Harmonix - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
