--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@inject IHttpContextAccessor _context;
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -20,7 +22,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Generate" asp-action="Index">Generate</a>
+                            @if (_context.HttpContext.Session.GetString("SpotifyUser") != null)
+                            {
+                                <a class="nav-link text-white" asp-area="" asp-controller="Generate" asp-action="Index">Generate</a>
+                            }
                         </li>
                     </ul>
                 </div>
@@ -34,12 +39,15 @@
                     <ul class="dropdown-menu dropdown-menu-end text-small shadow-small">
                         <li><a class="dropdown-item text-white" href="#">Settings</a></li>
                         <li>
-                            <a class="dropdown-item text-white" href="#">
+                            @if (_context.HttpContext.Session.GetString("SpotifyUser") == null)
+                            {
+                                <button class="dropdown-item text-white" onclick="location.href='@Url.Action("UserLogin", "Spotify")'">
                                 Sign In
                                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-spotify mx-2" viewBox="0 0 16 16">
                                     <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0m3.669 11.538a.5.5 0 0 1-.686.165c-1.879-1.147-4.243-1.407-7.028-.77a.499.499 0 0 1-.222-.973c3.048-.696 5.662-.397 7.77.892a.5.5 0 0 1 .166.686m.979-2.178a.624.624 0 0 1-.858.205c-2.15-1.321-5.428-1.704-7.972-.932a.625.625 0 0 1-.362-1.194c2.905-.881 6.517-.454 8.986 1.063a.624.624 0 0 1 .206.858m.084-2.268C10.154 5.56 5.9 5.419 3.438 6.166a.748.748 0 1 1-.434-1.432c2.825-.857 7.523-.692 10.492 1.07a.747.747 0 1 1-.764 1.288" />
                                 </svg>
-                            </a>
+                                </button>
+                            }
                         </li>
                     </ul>
                 </div>
